Fix: overflow:hidden for .newsItem so side scroll doesn't appear on <a> focus.
The 'original' link in each newsItem, when focused (i.e. outlined) would make
a scroll bar appear horizontally as the div was overflowing.

--- a/css/news.css
+++ b/css/news.css
@@ -1,6 +1,6 @@
 div#content div.newsItem {
 	height:auto;
-	overflow:auto;
+	overflow:hidden;
 	margin-bottom:15px;
 	clear:both;
 }
